<resources>
    <string name="app_name">Address</string>
    <string name="search_location">Search Location</string>
    <string name="save">Save</string>
    <string name="country_region">Country / Region</string>
    <string name="street_address">Street Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="try_again">Try Again</string>
    <string name="incorrect_request">Incorrect Request</string>
    <string name="please_fill_all_fields">Please Fill All Fields</string>
    <string name="Address">Address</string>
    <string name="choose_country">Choose Country…</string>
    <string name="search_address">Search Address…</string>
    <string name="space"> </string>
    <string name="Save">Save</string>
</resources>
